--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
+/* import font from google fonts */
+@import url("https://fonts.googleapis.com/css2?family=Nabla&family=Space+Grotesk:wght@300;600&display=swap");
+
+/* applies google font to whole app */
+* {
+  font-family: "Space Grotesk", "Courier New", Courier, monospace;
+  /* color: aliceblue; */
+}
+
+body {
+  margin: 0;
+  background-color: rgb(22, 25, 30);
+}
+
+/* NAV */
+/* NAV */
+/* NAV */
+
+/* FOOTER */
+/* FOOTER */
+/* FOOTER */
+
+.footer-name {
+  margin: auto;
+  font-size: x-large;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  width: 200px;
 }
