--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -7,11 +7,16 @@
   /* color: aliceblue; */
 }
 
-body {
-  margin: 0;
-  background-color: rgb(22, 25, 30);
+#root {
+  /* margin: 0; */
+  background-color: black;
+  min-height: 100vh;
 }
 
+h1 {
+  color: aliceblue;
+  /* background-color: #020530; */
+}
 /* NAV */
 /* NAV */
 /* NAV */
