--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -9,13 +9,10 @@
 
 #root {
   background-color: black;
+  color: #f0ffff;
   min-height: 100vh;
 }
 
-h1 {
-  color: aliceblue;
-  /* background-color: #020530; */
-}
 /* NAV */
 /* NAV */
 /* NAV */
@@ -28,13 +25,47 @@ h1 {
   margin-bottom: 1%;
 }
 
+/* HEADER */
+/* HEADER */
+/* HEADER */
+
+/* NOTE: .header-planet can be found in imageSource.css */
+
+.header-container {
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.header-textbox {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  padding: 5% 20% 20%;
+  text-align: center;
+  color: #f0ffff;
+  text-shadow: 1px 2px black;
+}
+
 /* FOOTER */
 /* FOOTER */
 /* FOOTER */
 
 .footer-name {
   margin: auto;
+  position: relative;
   font-size: x-large;
   text-align: center;
   width: 55%;
+}
+
+.increase-z {
+  position: relative;
+  z-index: 1;
+  background-color: #00000080;
 }
