added p(FOOTER.JSX) prelim funcionality for rendering a sign with the page title text hovering over the background-img; (HEADER.JSX) added arrow down icon and pa and pageTitle id for scroll fxn; (APP.JS) moved footer into Router tag; (imageSource.css) added positioning for the span text that hovers over background-img)

--- a/src/assets/imageSource.css
+++ b/src/assets/imageSource.css
@@ -6,6 +6,15 @@
   background-size: contain;
   height: 300px;
   width: 300px;
+  position: relative;
+}
+.background-img span {
+  position: absolute;
+  top: 170px;
+  left: 45px;
+  font-size: 1.3em;
+  background-color: #000000af;
+  border: ridge azure 3px;
 }
 
 /* navigation menu logo */
