--- a/src/assets/imageSource.css
+++ b/src/assets/imageSource.css
@@ -10,8 +10,10 @@
 }
 .background-img span {
   position: absolute;
-  top: 170px;
-  left: 45px;
+  top: 65px;
+  left: 47px;
+  width: 110px;
+  text-align: center;
   font-size: 1.3em;
   background-color: #000000af;
   border: ridge azure 3px;
