added scroll functionalities: background-img (astroRy.png) now translates downward to clear more screen space for content; adjusted scrollToPageTitle function and positioning of elements so it operates without bugs;;; reinstalled latest framer-motion pkg; adjusted reactSparkle animation to be more noticeable; adjusted footer styling for mobile optimization; added iconButton to Header; added filler div to about/portfolio pages for troubleshooting and previewing, to delete later

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -73,3 +73,15 @@
   z-index: 1;
   background-color: #00000080;
 }
+
+/* PAGES */
+/* PAGES */
+/* PAGES */
+
+/* ABOUT */
+/* ABOUT */
+.page-intro {
+  text-align: center;
+  padding: 2%;
+  margin: 2%;
+}
