--- a/src/assets/imageSource.css
+++ b/src/assets/imageSource.css
@@ -2,12 +2,13 @@
 .background-img {
   background-image: url("./images/AstroRy-revamp.png");
   background-repeat: no-repeat;
-  background-position: left 0px bottom -1px;
+  background-position: left 0px bottom -10px;
   background-size: contain;
   height: 300px;
   width: 300px;
   position: relative;
 }
+
 .background-img span {
   position: absolute;
   top: 65px;
@@ -17,6 +18,10 @@
   font-size: 1.3em;
   background-color: #000000af;
   border: ridge azure 3px;
+}
+
+.background-img.scrolled span {
+  background-position: left 0px bottom 50%; /* Adjust 50% as needed */
 }
 
 /* navigation menu logo */
