--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -70,7 +70,7 @@
 
 .increase-z {
   position: relative;
-  z-index: 1;
+  z-index: 10;
   background-color: #00000080;
 }
 
@@ -84,4 +84,5 @@
   text-align: center;
   padding: 2%;
   margin: 2%;
+  height: 100vh;
 }
