added animations; adjusted react-sparkle specs

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -85,6 +85,10 @@
 /* UTILITIES */
 /* UTILITIES */
 
+.hide-overflow {
+  overflow-x: hidden;
+}
+
 .increase-z {
   position: relative;
   z-index: 10;
