--- a/src/assets/imageSource.css
+++ b/src/assets/imageSource.css
@@ -48,6 +48,6 @@
   width: 370px;
   height: 370px;
   position: relative;
-  background-color: #f0ffff;
+  background-color: #000000;
   border-radius: 50% 50% 50% 50%;
 }
