added favicon img files; (HEADER) added styling and animations; (ABOUT) added static content, animations, and styling; (PAGEHEADER) created component to standardize the landing spot upon rendering a page

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -13,10 +13,16 @@
   /* color: aliceblue; */
 }
 
+html,
+body {
+  /* min-height: 100vh; */
+  background-color: black;
+}
+
 #root {
   background-color: black;
   color: #f0ffff;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 /* COMPONENTS */
@@ -106,5 +112,35 @@
   text-align: center;
   padding: 2%;
   margin: 2%;
-  height: 100vh;
+  height: 75vh;
+}
+
+.section-container {
+  display: flex;
+  align-items: flex-start;
+  margin: 2%;
+  padding: 5%;
+  min-height: 75vh;
+}
+
+.section-title {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  align-content: flex-end;
+  text-align: right;
+  min-width: 120px;
+  max-width: 120px;
+  margin: 2%;
+  margin-left: 4%;
+  padding: 2%;
+}
+
+.section-content {
+  display: flex;
+  flex-direction: column;
+  margin: 2%;
+  padding: 2%;
+  border-left: #f0ffff 2px solid;
 }
