--- a/src/assets/imageSource.css
+++ b/src/assets/imageSource.css
@@ -59,6 +59,7 @@
   width: 300px;
   min-height: 400px;
   margin-top: 3% auto;
-  border: 1px solid #000000af;
-  border-radius: 1% 1% 0% 0%;
+  border: 2px solid #87b7c2;
+  border-radius: 2%;
+  box-shadow: 0px -3px 25px 5px #87b7c2af;
 }
