--- a/src/assets/imageSource.css
+++ b/src/assets/imageSource.css
@@ -18,6 +18,7 @@
   font-size: 1.3em;
   background-color: #000000af;
   border: ridge azure 3px;
+  border-radius: 20%;
 }
 
 /* navigation menu logo */
