--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -116,11 +116,13 @@ body {
 
 .section-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: center;
-  margin: 2%;
+  margin: 2% auto;
   padding: 5%;
   min-height: 75vh;
+  width: 100%;
 }
 
 .section-title {
@@ -130,10 +132,14 @@ body {
   align-items: flex-end;
   align-content: flex-end;
   text-align: right;
-  min-width: 120px;
-  max-width: 120px;
+  min-width: 150px;
+  max-width: 175px;
+  padding-top: 5%;
+}
+
+.section-title h2 {
   margin: 2%;
-  margin-left: 4%;
+  margin-right: 4%;
   padding: 2%;
 }
 
@@ -142,19 +148,104 @@ body {
   flex-direction: column;
   margin: 2%;
   padding: 2%;
-  min-width: 40%;
-  max-width: 50%;
+  min-width: 50%;
+  max-width: 70%;
   border-left: #f0ffff 2px solid;
+  background-color: #ffffff10;
+}
+
+.section-content h3 {
+  border-left: #395858 2px solid;
+  padding: 2%;
 }
 
 .section-content ul {
-  list-style-type: circle;
+  list-style-type: none;
   padding-top: 0;
   margin-top: 0;
+  text-align: start;
 }
 
 /* PROJECTS */
 /* PROJECTS */
+
+.projects-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 2% auto;
+  padding: 5%;
+  min-height: 75vh;
+  width: 100%;
+}
+
+.projects-title {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  align-content: flex-end;
+  text-align: right;
+  min-width: 150px;
+  max-width: 175px;
+  padding-top: 4%;
+}
+
+.projects-title h2 {
+  margin: 2%;
+  padding: 2%;
+}
+
+.projects-title h4 {
+  padding: 2%;
+  margin: 2%;
+}
+
+.projects-content {
+  display: flex;
+  flex-direction: column;
+  margin: 2%;
+  padding: 2%;
+  min-width: 50%;
+  max-width: 70%;
+  border-left: #f0ffff 2px solid;
+  background-color: #ffffff10;
+}
+
+.projects-aside {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+/* freelance */
+
+/* bootcamp */
+
+.freelance-title {
+  padding-left: 2%;
+  border-left: #395858 2px solid;
+  padding-bottom: 2%;
+}
+
+.freelance-title a,
+.freelance-title p,
+.bootcamp-title a,
+.bootcamp-title p {
+  color: #6abbbb;
+  margin-bottom: 0;
+}
+
+.freelance-content {
+  padding-left: 0;
+}
+
+.bootcamp-title {
+  padding-left: 2%;
+  border-left: #395858 2px solid;
+}
 
 /* RESUME */
 /* RESUME */
@@ -208,27 +299,71 @@ body {
 /* MEDIA QUERY - SMALL SCREEN */
 
 @media screen and (max-width: 877px) {
+  /* about */
   .section-container {
-    margin: 0%;
-    padding: 0%;
-    margin-top: 5%;
-    padding-top: 5%;
+    justify-content: flex-start;
+    min-height: 100vh;
   }
 
   .section-title {
-    margin: 0%;
-    padding: 0%;
-    margin-right: 2%;
-    margin-left: 0%;
-    padding-right: 2%;
+    min-width: 100%;
   }
 
   .section-content {
     margin: 0%;
     padding: 0%;
+    padding: 3%;
+    min-width: 100%;
+    border: #f0ffff 2px solid;
+    border-radius: 2%;
+    background-color: #ffffff10;
+  }
+
+  /* projects */
+
+  .projects-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .projects-aside {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+  .projects-title {
+    min-width: 100%;
+    margin: 0%;
+    padding: 0%;
+    margin-right: 2%;
+    margin-left: 0%;
+    padding-right: 2%;
+    /* border-left: #f0ffff 2px solid;
+    align-items: flex-start;
+    align-content: flex-start;
+    padding-left: 5%;
+    text-align: left;
+    min-width: 100%;
+    margin: 2%; */
+  }
+
+  .freelance-title {
+    padding-left: 4%;
+  }
+
+  .projects-content {
+    min-width: 100%;
+    margin: 0%;
+    padding: 0%;
     margin-top: 2%;
-    padding-right: 5%;
+    padding-right: 3%;
     padding-left: 3%;
+    padding-top: 3%;
+    border: #f0ffff 2px solid;
+    border-radius: 2%;
+    /* border-left: transparent;
+    padding: 5%;
+    min-width: 100%;
+    max-width: 100vw; */
   }
 
   /* resume */
