--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -19,7 +19,6 @@ body {
 #root {
   background-color: black;
   color: #f0ffff;
-  /* min-height: 100vh; */
 }
 
 /* COMPONENTS */
@@ -150,12 +149,13 @@ body {
   padding: 2%;
   min-width: 50%;
   max-width: 70%;
-  border-left: #f0ffff 2px solid;
+  border-top: 1px solid #abd5ffc5;
+  border-left: #abd5ffc5 1px solid;
   background-color: #ffffff10;
 }
 
 .section-content h3 {
-  border-left: #395858 2px solid;
+  border-left: #5d90c3 2px solid;
   padding: 2%;
 }
 
@@ -190,6 +190,7 @@ body {
   min-width: 150px;
   max-width: 175px;
   padding-top: 4%;
+  padding-right: 2%;
 }
 
 .projects-title h2 {
@@ -205,46 +206,96 @@ body {
 .projects-content {
   display: flex;
   flex-direction: column;
-  margin: 2%;
-  padding: 2%;
+  /* margin: 2%; */
+  /* padding: 2%; */
   min-width: 50%;
   max-width: 70%;
-  border-left: #f0ffff 2px solid;
+  border-left: #abd5ffc5 1px solid;
   background-color: #ffffff10;
 }
 
 .projects-aside {
   display: flex;
   flex-direction: column;
-  margin-top: 3%;
   margin-bottom: 3%;
+  /* border: #395858 2px solid; */
+  border-radius: 2%;
 }
 
 /* freelance */
 
-/* bootcamp */
-
 .freelance-title {
+  background: linear-gradient(0deg, transparent 0%, #ffffff10 100%);
+  /* padding-top: 3%; */
   padding-left: 2%;
-  border-left: #395858 2px solid;
-  padding-bottom: 2%;
+  padding-bottom: 3%;
+  text-align: center;
+  text-shadow: 1px 2px #000000;
+  border-top: 1px solid #abd5ffc5;
+  /* border-bottom: #395858 2px solid; */
+  /* border-radius: 2%; */
 }
 
 .freelance-title a,
-.freelance-title p,
-.bootcamp-title a,
-.bootcamp-title p {
-  color: #6abbbb;
+.bootcamp-title a {
+  text-decoration: none;
+  color: #6094c1;
   margin-bottom: 0;
+  padding: 1%;
+  padding-left: 3%;
+  padding-right: 3%;
+  border: #6094c140 2px solid;
+  border-radius: 2%;
+  background-color: #35557120;
+  transition: box-shadow 0.2s ease-in-out;
+}
+
+.freelance-title a:hover,
+.bootcamp-title a:hover {
+  box-shadow: 0px 0px 10px 0px #6094c180;
 }
 
 .freelance-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   padding-left: 0;
 }
 
+/* .freelance-image styling found in imageSource.css */
+
+.freelance-description {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* align-items: center; */
+  max-width: 90%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.freelance-description span {
+  text-align: center;
+  padding-right: 5%;
+  min-width: 250px;
+  max-width: 50%;
+}
+
+.freelance-description ul {
+  list-style-type: none;
+  text-align: start;
+  padding-left: 3%;
+  min-width: 250px;
+  max-width: 45%;
+  border-left: #abd5ff39 1px solid;
+}
+
+/* bootcamp */
+
 .bootcamp-title {
   padding-left: 2%;
-  border-left: #395858 2px solid;
+  border-top: #abd5ffc5 1px solid;
+  border-top: #abd5ffc5 1px solid;
 }
 
 /* RESUME */
@@ -302,20 +353,22 @@ body {
   /* about */
   .section-container {
     justify-content: flex-start;
-    min-height: 100vh;
+    min-height: 75vh;
   }
 
   .section-title {
     min-width: 100%;
+    margin-bottom: 0;
   }
 
   .section-content {
     margin: 0%;
-    padding: 0%;
     padding: 3%;
     min-width: 100%;
-    border: #f0ffff 2px solid;
-    border-radius: 2%;
+    border-top: 1px solid #abd5ffc5;
+    border-left: #abd5ffc5 1px solid;
+    background-color: #ffffff10;
+    /* border-radius: 2%; */
     background-color: #ffffff10;
   }
 
@@ -326,10 +379,11 @@ body {
     align-items: flex-start;
   }
 
-  .projects-aside {
+  /* .projects-aside {
     padding-left: 2%;
     padding-right: 2%;
-  }
+  } */
+
   .projects-title {
     min-width: 100%;
     margin: 0%;
@@ -346,20 +400,36 @@ body {
     margin: 2%; */
   }
 
-  .freelance-title {
-    padding-left: 4%;
+  .freelance-description {
+    justify-content: flex-start;
+  }
+
+  .freelance-description span {
+    text-align: center;
+    min-width: 250px;
+    max-width: 100%;
+    padding-right: 0%;
+  }
+
+  .freelance-description ul {
+    list-style-type: none;
+    text-align: start;
+    justify-self: flex-start;
+    padding-left: 3%;
+    min-width: 250px;
+    max-width: 100%;
   }
 
   .projects-content {
     min-width: 100%;
     margin: 0%;
     padding: 0%;
-    margin-top: 2%;
-    padding-right: 3%;
-    padding-left: 3%;
-    padding-top: 3%;
-    border: #f0ffff 2px solid;
-    border-radius: 2%;
+    /* margin-top: 2%; */
+    /* padding-right: 3%; */
+    /* padding-left: 3%; */
+    /* padding-top: 3%; */
+    /* border: #f0ffff 2px solid; */
+    /* border-radius: 2%; */
     /* border-left: transparent;
     padding: 5%;
     min-width: 100%;
