--- a/src/assets/imageSource.css
+++ b/src/assets/imageSource.css
@@ -53,6 +53,22 @@
   border-radius: 50% 50% 50% 50%;
 }
 
+/* projects */
+.freelance-img {
+  display: flex;
+  max-width: 100%;
+  border-top: #abd5ff81 1px solid;
+  border-bottom: #abd5ff81 1px solid;
+
+  /* border-bottom: #6fcfcf 2px solid; */
+  border-left: transparent;
+  border-right: transparent;
+  border-radius: 0 0 0% 0%;
+  /* background: linear-gradient(180deg, transparent 0%, #ffffff10 100%); */
+
+  /* box-shadow: 0px 25px 25px 0px #d8efff45; */
+}
+
 /* resume */
 .resume-img {
   background: url("../assets/images/myResume.png") no-repeat center center;
