--- a/src/assets/imageSource.css
+++ b/src/assets/imageSource.css
@@ -76,7 +76,8 @@
   width: 300px;
   min-height: 400px;
   margin-top: 3% auto;
-  border: 2px solid #87b7c2;
+  border: #abd5ffc5 1px solid;
+
   border-radius: 2%;
-  box-shadow: 0px -3px 25px 5px #87b7c2af;
+  box-shadow: 0px -3px 20px 2px #abd5ff81;
 }
