--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -31,14 +31,6 @@ body {
 /* NAV */
 /* NAV */
 
-/* form - contact modal */
-.contact-form {
-  text-align: center;
-  padding-left: 2%;
-  padding-right: 2%;
-  margin-bottom: 1%;
-}
-
 /* HEADER */
 /* HEADER */
 /* HEADER */
@@ -103,6 +95,16 @@ body {
 /* PAGES */
 /* PAGES */
 /* PAGES */
+
+/* CONTACT MODAL */
+/* CONTACT MODAL */
+
+.contact-form {
+  text-align: center;
+  padding-left: 2%;
+  padding-right: 2%;
+  margin-bottom: 1%;
+}
 
 /* ABOUT */
 /* ABOUT */
@@ -205,8 +207,6 @@ body {
 .projects-content {
   display: flex;
   flex-direction: column;
-  /* margin: 2%; */
-  /* padding: 2%; */
   min-width: 50%;
   max-width: 70%;
   border-left: #abd5ffc5 1px solid;
@@ -216,23 +216,21 @@ body {
   display: flex;
   flex-direction: column;
   margin-bottom: 3%;
-  /* border: #395858 2px solid; */
-  /* border-radius: 2%; */
   background: linear-gradient(0deg, transparent 0%, #ffffff20 50%);
+  border-radius: 0 10px 0 0;
 }
 
 /* freelance */
 
 .freelance-title {
-  background: linear-gradient(0deg, transparent 0%, #ffffff20 100%);
-  /* padding-top: 3%; */
+  padding-top: 3%;
   padding-left: 2%;
   padding-bottom: 3%;
   text-align: center;
   text-shadow: 1px 2px #000000;
   border-top: 1px solid #abd5ffc5;
-  /* border-bottom: #395858 2px solid; */
-  /* border-radius: 2%; */
+  border-bottom: #39585840 2px solid;
+  border-radius: 0 10px 0 10px;
 }
 
 .freelance-content {
@@ -250,7 +248,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* align-items: center; */
   max-width: 90%;
   padding-top: 2%;
   padding-bottom: 2%;
@@ -275,15 +272,34 @@ body {
 /* bootcamp */
 
 .bootcamp-title {
-  background: linear-gradient(0deg, transparent 0%, #ffffff20 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
   padding-top: 2%;
   min-width: 100%;
-  /* padding-left: 2%; */
   padding-bottom: 3%;
   text-align: center;
   text-shadow: 1px 2px #000000;
   border-top: #abd5ffc5 1px solid;
-  border-bottom: #abd5ff20 1px solid;
+  border-bottom: #abd5ff39 2px solid;
+  border-radius: 0 10px 0 10px;
+}
+
+.bootcamp-title h2 {
+  border-bottom: #5d90c3 1px solid;
+  border-top: #5d90c3 1px solid;
+  min-width: 50%;
+  max-width: 50%;
+  padding: 2%;
+  margin-bottom: 0;
+}
+
+.bootcamp-title h3 {
+  min-width: 90%;
+  max-width: 90%;
+  padding: 2%;
+  margin-bottom: 0;
 }
 
 .bootcamp-subtitle {
@@ -293,6 +309,7 @@ body {
 }
 
 .bootcamp-subtitle h3 {
+  text-decoration: underline;
   min-width: 100%;
   margin-top: 4%;
   padding: 2%;
@@ -310,9 +327,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* align-items: center; */
   max-width: 100%;
-  /* padding-top: 2%; */
   padding-bottom: 2%;
 }
 
@@ -349,15 +364,11 @@ body {
   padding: 5%;
   padding-top: 0;
   margin: auto;
-  /* margin: 2% auto; */
-  /* margin-top: 0; */
   min-height: 75vh;
   width: 90%;
   background: linear-gradient(0deg, transparent 0%, #ffffff20 100%);
   border-top: #abd5ffc5 1px solid;
   border-left: #abd5ffc5 1px solid;
-
-  /* border-top: #abd5ffc5 1px solid; */
 }
 
 .resume-section1 {
@@ -365,7 +376,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* margin-top: 3%; */
   padding: 5%;
   min-width: 35%;
 }
@@ -376,12 +386,10 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  /* margin-top: 3%; */
   padding: 5%;
   min-width: 40%;
   max-width: 50%;
   height: auto;
-  /* border-right: #abd5ffc5 1px solid; */
 }
 
 .resume-section2 h2 {
@@ -414,7 +422,6 @@ body {
     min-width: 100%;
     border-top: 1px solid #abd5ffc5;
     border-left: #abd5ffc5 1px solid;
-    /* border-radius: 2%; */
     background: linear-gradient(0deg, transparent 0%, #ffffff20 100%);
   }
 
@@ -422,27 +429,14 @@ body {
 
   .projects-container {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
   }
 
-  /* .projects-aside {
-    padding-left: 2%;
-    padding-right: 2%;
-  } */
-
   .projects-title {
-    /* min-width: 100%; */
     margin: 0%;
     padding: 0%;
     margin-right: 2%;
     padding-right: 2%;
-    /* border-left: #f0ffff 2px solid;
-    align-items: flex-start;
-    align-content: flex-start;
-    padding-left: 5%;
-    text-align: left;
-    min-width: 100%;
-    margin: 2%; */
   }
 
   .projects-title h2 {
@@ -478,6 +472,18 @@ body {
     max-width: 100%;
   }
 
+  .bootcamp-description .bootcamp-description-left {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    min-width: 100%;
+    max-width: 100%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+
   .bootcamp-description .bootcamp-description-right {
     text-align: start;
     margin-left: 3%;
@@ -495,16 +501,6 @@ body {
     min-width: 100%;
     margin: 0%;
     padding: 0%;
-    /* margin-top: 2%; */
-    /* padding-right: 3%; */
-    /* padding-left: 3%; */
-    /* padding-top: 3%; */
-    /* border: #f0ffff 2px solid; */
-    /* border-radius: 2%; */
-    /* border-left: transparent;
-    padding: 5%;
-    min-width: 100%;
-    max-width: 100vw; */
   }
 
   /* resume */
